--- a/client/app/styles/main.css
+++ b/client/app/styles/main.css
@@ -1,7 +1,18 @@
+
+
 body {
   background: #fafafa;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #333;
+
+/*BACKGROUND RADIAL GRADIENT PATTERN*/
+background:
+radial-gradient(black 15%, transparent 16%) 0 0,
+radial-gradient(black 15%, transparent 16%) 8px 8px,
+radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 0 1px,
+radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 8px 9px;
+background-color:#282828;
+background-size:16px 16px;
 }
 
 .hero-unit {
@@ -26,4 +37,7 @@ body {
   background: #ccc;
   color: #000;
   padding: 0.2em 0;
+}
+.jumbotron,.table-responsive{
+  background-color: #EDEDED;
 }
