--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -2,17 +2,17 @@
 
 body {
   background: #fafafa;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  
   color: #333;
 
 /*BACKGROUND RADIAL GRADIENT PATTERN*/
-background:
+/*background:
 radial-gradient(black 15%, transparent 16%) 0 0,
 radial-gradient(black 15%, transparent 16%) 8px 8px,
 radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 0 1px,
 radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 8px 9px;
 background-color:#282828;
-background-size:16px 16px;
+background-size:16px 16px;*/
 }
 
 .hero-unit {
@@ -38,6 +38,25 @@ background-size:16px 16px;
   color: #000;
   padding: 0.2em 0;
 }
-.jumbotron,.table-responsive{
+/*.jumbotron,.table-responsive{
   background-color: #EDEDED;
+}*/
+.table{
+  
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  
+}
+thead,tfoot{
+  background-color: #182047;
+  color:#E8E8B2;
+}
+.odd{
+  background-color: #525E80;
+}
+body{
+  background: url('images/background-big.jpg') no-repeat   center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
