--- a/app/views/radios/index.html.erb
+++ b/app/views/radios/index.html.erb
@@ -30,15 +30,15 @@
             <h4>RadioStationHub</h4>      
           </div>
         </div>
-    </div>
+    </div>-->
 
     <!--TABLE-->
     <div class="container-fluid">
         <div class='row'>
-            
-                  	<div class="table-responsive col-xs-12 col-sm-offset-1 col-sm-10 col-md-offset-2 col-md-8 col-lg-offset-2 col-lg-8">
+            <div class='col-xs-12 col-sm-offset-1 col-sm-10 col-md-offset-2 col-md-8 col-lg-offset-2 col-lg-8'>
+                  	<div class="table-responsive">
                 	   <table id='tabla' class='table table-hover table-bordered'>
-                	   	<thead class="bg-info">
+                	   	<thead>
                 	   		<tr>
                 		   		<th>Name</th>
                 		   		<th>Play</th>
@@ -53,18 +53,10 @@
                 	   		</tr>
                 	   	</tfoot>
                 	   	<tbody>
-                	   		<!--<tr>
-                	   			<td>Radio 3</td>
-                	   			<td><button type="button" class="btn btn-warning">Play</button></td>
-                	   			<td>
-                                    <button type="button" class="btn btn-info" id='editBtn'>Edit</button>
-                                    <button type="button" class="btn btn-info" id='deleteBtn'>Delete</button>
-                                </td>
-                	   		</tr>-->
                 	   	</tbody>
                 	   </table>
                    </div>
-           
+           </div>
        </div>
         <div class='row'>
             <div class='col-xs-12 col-sm-8 col-md-offset-2 col-md-8 col-lg-8'>
@@ -137,7 +129,7 @@
 
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                <button type="button" class="btn btn-default" data-dismiss="modal">Submit</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal" id="addSubmit">Submit</button>
             </div>
         </div><!--modalcontent-->
 
@@ -170,7 +162,6 @@
 
     </div><!--modaldialog-->
 </div><!--modalfade-->
-
 
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
