--- a/app/views/radios/index.html.erb
+++ b/app/views/radios/index.html.erb
@@ -15,7 +15,8 @@
     <!-- <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="styles/main.css"> -->
     <%= stylesheet_link_tag "datatables/media/css/jquery.dataTables" %>
-    <%= stylesheet_link_tag "bootstrap/dist/css/bootstrap" %> -->
+    <%= stylesheet_link_tag "bootstrap/dist/css/bootstrap" %>
+    <%= stylesheet_link_tag "growl/jquery.growl.css" %>
     <%= stylesheet_link_tag "main"%>
     
     <!-- endbuild -->
@@ -173,6 +174,7 @@
     <%= javascript_include_tag "jquery/dist/jquery" %>
     <%= javascript_include_tag "datatables/media/js/jquery.dataTables" %>
     <%= javascript_include_tag "bootstrap/dist/js/bootstrap" %>
+    <%= javascript_include_tag "growl/jquery.growl.js" %>
 
   
 
