--- a/app/views/radios/index.html.erb
+++ b/app/views/radios/index.html.erb
@@ -37,7 +37,7 @@
     <div class="container-fluid">
         <div class='row'>
             <div class='col-xs-12 col-sm-offset-1 col-sm-10 col-md-offset-2 col-md-8 col-lg-offset-2 col-lg-8'>
-                  	<div class="table-responsive">
+                  	<!--<div class="table-responsive">-->
                 	   <table id='tabla' class='table table-hover table-bordered'>
                 	   	<thead>
                 	   		<tr>
@@ -56,11 +56,11 @@
                 	   	<tbody>
                 	   	</tbody>
                 	   </table>
-                   </div>
+                   <!--</div>-->
            </div>
        </div>
         <div class='row'>
-            <div class='col-xs-12 col-sm-8 col-md-offset-2 col-md-8 col-lg-8'>
+            <div class='col-xs-12 col-sm-offset-1 col-sm-10 col-md-offset-2 col-md-8 col-lg-offset-2 col-lg-8'>
                 <button type="button" class="btn btn-info" id='addBtn'>Add Radio</button>
             </div>
         </div>       
