--- a/app/views/radios/index.html.erb
+++ b/app/views/radios/index.html.erb
@@ -150,7 +150,7 @@
 
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                <button type="button" class="btn btn-default" data-dismiss="modal">Delete</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal" id="confirmDelete">Delete</button>
             </div>
         </div><!--modalcontent-->
 
