--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -47,22 +47,51 @@ background-size:16px 16px;*/
 .table{
   
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  
+  box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.5);
+  border-radius: 5px;
 }
 .table > tbody > tr > td{
   vertical-align: middle;
-    background-color: #376191;
+  background-color: #376191;
   color:#111435;
+  font-family: 'Open Sans', sans-serif;
 }
 .table-hover > tbody > tr:hover{
   background-color: #518EA1;
 }
 
 thead,tfoot{
-  background-color: #182047;
+  /*background-color: #182047;*/
   color:#E8E8B2;
+  /*font-family: 'Droid Serif', serif;*/
+  /*font-family: 'Libre Baskerville', serif;*/
+  /*font-family: 'Raleway', sans-serif;*/
+  font-family: 'Montserrat', sans-serif;
+  background: -webkit-linear-gradient(#1C2444, #0B1644); /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(#1C2444, #0B1644); /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(#1C2444, #0B1644); /* For Firefox 3.6 to 15 */
+  background: linear-gradient(#1C2444, #0B1644); /* Standard syntax */
 }
 
+/*------------BUTTON-------------------------*/
+.btn-size-add{
+    width: 120px !important;
+}
+.btn-size {
+    width: 80px !important;
+    text-align: center;
+    /*margin: auto !important;
+    width: 40% !important; */
+    box-shadow: 5px 5px 2.5px rgba(0, 0, 0, 0.15);
+}
+/*.center{
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%) 
+  }*/
 /*--------RESPONSIVE BACKGROUND---------------*/
 
 body{
