--- a/app/views/radios/index.html.erb
+++ b/app/views/radios/index.html.erb
@@ -7,6 +7,11 @@
     <meta name="viewport" content="width=device-width">
     <link rel="shortcut icon" href="/favicon.ico">
 
+    <link href='http://fonts.googleapis.com/css?family=Droid+Serif:700' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Libre+Baskerville:700' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Raleway:700' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
     <%= stylesheet_link_tag "datatables/media/css/jquery.dataTables" %>
     <%= stylesheet_link_tag "bootstrap/dist/css/bootstrap" %>
     <%= stylesheet_link_tag "growl/jquery.growl.css" %>
@@ -34,9 +39,9 @@
                 	   <table id='tabla' class='table table-hover table-bordered'>
                 	   	<thead>
                 	   		<tr>
-                		   		<th>Name</th>
-                		   		<th>Play</th>
-                		   		<th>Edit/Delete</th>
+                		   		<th>NAME</th>
+                		   		<th>PLAY</th>
+                		   		<th>EDIT  DELETE</th>
                 	   		</tr>
                 	   	</thead>
                 	   	<tfoot>
@@ -54,7 +59,7 @@
        </div>
         <div class='row'>
             <div class='col-xs-12 col-sm-offset-1 col-sm-10 col-md-offset-2 col-md-8 col-lg-offset-2 col-lg-8'>
-                <button type="button" class="btn btn-info" id='addBtn'>Add Radio</button>
+                <button type="button" class="btn btn-warning btn-size-add" id='addBtn'><span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span>    Add Radio</button>
             </div>
         </div>       
    </div>
