--- a/app/views/radios/index.html.erb
+++ b/app/views/radios/index.html.erb
@@ -81,11 +81,11 @@
                <form id='addForm'>
                    <div class='form-group'>
                        <label for='name'>Name</label>
-                       <input type="text" class="form-conntrol" id='addName' placeholder='Name'>
+                       <input type="text" class="form-conntrol" id='addRadioName' placeholder='Name'>
                    </div>
                    <div class='form-group'>
                        <label for='url'>Source</label>
-                       <input type="url" class="form-conntrol" id='addUrl' placeholder='Url'>
+                       <input type="url" class="form-conntrol" id='addRadioUrl' placeholder='Url'>
                    </div>
                    
                </form>
@@ -93,7 +93,7 @@
 
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                <button type="button" class="btn btn-default" data-dismiss="modal">Submit</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal" id="addSubmit">Submit</button>
             </div>
         </div><!--modalcontent-->
 
@@ -128,7 +128,7 @@
 
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                <button type="button" class="btn btn-default" data-dismiss="modal" id="addSubmit">Submit</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal" id="editSubmit">Submit</button>
             </div>
         </div><!--modalcontent-->
 
