modify layout, prevent duplicate jquery click events

--- a/app/views/radios/index.html.erb
+++ b/app/views/radios/index.html.erb
@@ -7,9 +7,6 @@
     <meta name="viewport" content="width=device-width">
     <link rel="shortcut icon" href="/favicon.ico">
 
-    <link href='http://fonts.googleapis.com/css?family=Droid+Serif:700' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Libre+Baskerville:700' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Raleway:700' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
     <%= stylesheet_link_tag "datatables/media/css/jquery.dataTables" %>
@@ -34,7 +31,7 @@
     <!--TABLE-->
     <div class="container-fluid">
         <div class='row'>
-            <div class='col-xs-12 col-sm-offset-1 col-sm-10 col-md-offset-2 col-md-8 col-lg-offset-2 col-lg-8'>
+            <div class='col-xs-12 col-sm-offset-1 col-sm-10 col-md-offset-2 col-md-8 col-lg-offset-3 col-lg-6'>
                   	<!--<div class="table-responsive">-->
                 	   <table id='tabla' class='table table-hover table-bordered'>
                 	   	<thead>
@@ -46,9 +43,9 @@
                 	   	</thead>
                 	   	<tfoot>
                 	   		<tr>
-                		   		<th>Name</th>
-                		   		<th>Play</th>
-                		   		<th>Edit/Delete</th>
+                		   		<th>NAME</th>
+                		   		<th>PLAY</th>
+                		   		<th>EDIT  DELETE</th>
                 	   		</tr>
                 	   	</tfoot>
                 	   	<tbody>
@@ -58,8 +55,8 @@
            </div>
        </div>
         <div class='row'>
-            <div class='col-xs-12 col-sm-offset-1 col-sm-10 col-md-offset-2 col-md-8 col-lg-offset-2 col-lg-8'>
-                <button type="button" class="btn btn-warning btn-size-add" id='addBtn'><span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span>    Add Radio</button>
+            <div class='col-xs-12 col-sm-offset-1 col-sm-10 col-md-offset-2 col-md-8 col-lg-offset-3 col-lg-6'>
+                <button type="button" class="btn btn-warning btn-size-add" id='addBtn'><span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span> Add Radio</button>
             </div>
         </div>       
    </div>
